--- a/paquescolar-web/src/main/webapp/app/con05MontosporProveedor.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con05MontosporProveedor.xhtml
@@ -6,29 +6,27 @@
     xmlns:f="http://java.sun.com/jsf/core"
     template="#{pageContext.servletContext.contextPath}/resources/template/template.xhtml">
     <ui:define name="content">
+        <p:menubar id="menuBar" styleClass="divSticky"> 
+            <p:menuitem value="Nuevo" icon="fa fa-file-o" disabled="true"/>
+            <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
+            <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
+            <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
+            <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
+
+            <f:facet  name="options">  
+                <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
+            </f:facet>  
+        </p:menubar>
+
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <p:menubar> 
-                        <p:menuitem value="Nuevo" icon="fa fa-file-o" disabled="true"/>
-                        <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
-                        <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
-                        <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
-                        <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
-
-                        <f:facet  name="options">  
-                            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
-                        </f:facet>  
-                    </p:menubar>
-
-                    <h3>
+                    <h1>
                         <i class="fa fa-filter blue" style="font-size: 16px;"></i>
                         <p:spacer width="10" height="8"/>
                         <p:outputLabel value="Filtro de busqueda"/>
-                    </h3>
-
-                    <p:panelGrid columns="2"
-                                 styleClass="ui-panelgrid-blank form-group form-elements" style="border:0px none; background-color:transparent;">
+                    </h1>
+                    <p:panelGrid columns="2" styleClass="ui-panelgrid-blank form-group form-elements" style="border:0px none; background-color:transparent;">
                         <p:outputLabel value="#{bundle['compra.rubroAdq']}:" />  
                         <p:selectOneMenu id="idRubro" value="#{creditoBancarioController.rubro}" effect="fade">
                             <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />  
@@ -57,16 +55,16 @@
                         <h:outputText value="Datos"/>
                     </h1>
                     <p:outputPanel id="tblCeNoDisponibles">
-                        <h:panelGrid columns="8">
+                        <p:panelGrid columns="6" columnClasses="col2_label,col1,col2_label,col3,col2_label,col2" styleClass="ui-panelgrid-blank form-group form-elements" style="border:0px none; background-color:transparent;">
                             <p:outputLabel value="Total de contratos:" />
                             <p:inputText value="#{creditoBancarioController.numeroDeContratosEnCredito}" size="5" styleClass="numero" readonly="true"/>
-                            <p:spacer width="10" height="8"/>
+                            
                             <p:outputLabel value="Monto total de Creditos:"/>
                             <p:inputNumber thousandSeparator="," decimalSeparator="." decimalPlaces="2" value="#{creditoBancarioController.montoTotalEnCreditos}" inputStyle="text-align: right;" readonly="true"/>
-                            <p:spacer width="10" height="8"/>
+                            
                             <p:outputLabel value="Monto total de Contratos:"/>
                             <p:inputNumber thousandSeparator="," decimalSeparator="." decimalPlaces="2" value="#{creditoBancarioController.montoTotalEnContratos}" inputStyle="text-align: right" readonly="true" />
-                        </h:panelGrid>
+                        </p:panelGrid>
                         <br/>
                         <p:dataTable id="tblResumen" widgetVar="tblResumen" var="ceNoDisponible" value="#{creditoBancarioController.listaProvGral}" 
                                      emptyMessage="No hay ningun credito" paginator="true" paginatorPosition="top"> 
