--- a/paquescolar-web/src/main/webapp/app/reg03FotografiaMuestras.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg03FotografiaMuestras.xhtml
@@ -20,7 +20,7 @@
         </p:menubar>
         <p:panel visible="false">
             <p:commandButton id="btnModificar" value="ok" actionListener="#{proveedorController.filtroProveedores}">
-                <p:ajax event="dialogReturn" listener="#{proveedorController.empSelecPrecioRef}"   update="frmPrincipal pnlFoto" />
+                <p:ajax event="dialogReturn" listener="#{proveedorController.empSelecPrecioRef}" update="frmPrincipal pnlFoto" />
             </p:commandButton>
         </p:panel>
         <div class="ui-g">
@@ -56,7 +56,7 @@
                                 </p:commandButton>
                             </h:panelGrid>
                             <p:galleria value="#{proveedorController.images}" var="image" panelHeight="500" style="width: auto;" autoPlay="false">
-                                <p:graphicImage value="/DynamicImageServlet?file=#{image}" style="max-height: 500px; width: auto;"/>
+                                <p:graphicImage value="/DynamicImageServlet?file=#{bundle['path_images']}#{image}" style="max-height: 500px; width: auto;"/>
                             </p:galleria>
                         </h:panelGrid>
                     </h:panelGrid>
