--- a/paquescolar-web/src/main/webapp/app/reg03MunicipiosInteres.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg03MunicipiosInteres.xhtml
@@ -19,7 +19,7 @@
         </p:menubar>
         <p:panel visible="false">
             <p:commandButton id="btnModificar" value="ok" actionListener="#{proveedorController.filtroProveedores}">
-                <p:ajax event="dialogReturn" listener="#{proveedorController.empSelecMuniInteres}"   update="frmPrincipal" />
+                <p:ajax event="dialogReturn" listener="#{proveedorController.empSelecMuniInteres}" update="frmPrincipal pnlFoto" />
             </p:commandButton>
         </p:panel>
         <div class="ui-g">
