--- a/paquescolar-web/src/main/webapp/app/con06ExcelSeguimientoDepaReports.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con06ExcelSeguimientoDepaReports.xhtml
@@ -6,34 +6,32 @@
     xmlns:f="http://java.sun.com/jsf/core"
     template="#{pageContext.servletContext.contextPath}/resources/template/template.xhtml">
     <ui:define name="content">
+        <p:menubar id="menuBar" styleClass="divSticky"> 
+            <p:menuitem value="Nuevo" icon="fa fa-file-o" disabled="true"/>
+            <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
+            <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
+            <p:menuitem value="Imprimir" icon="fa fa-print" actionListener="#{graficoController.generarReportesDepartamentoExcel}" ajax="false"/>
+            <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>  
+
+            <f:facet  name="options">  
+                <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
+            </f:facet>  
+        </p:menubar>
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <p:menubar> 
-                        <p:menuitem value="Nuevo" icon="fa fa-file-o" disabled="true"/>
-                        <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
-                        <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
-                        <p:menuitem value="Imprimir" icon="fa fa-print" actionListener="#{graficoController.generarReportesDepartamentoExcel}" ajax="false"/>
-                        <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>  
-
-                        <f:facet  name="options">  
-                            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
-                        </f:facet>  
-                    </p:menubar>
-                    <p:panel id="pnlFiltro" header="Avance de la ejecución del Seguimiento a Contratos" toggleable="true" >
-                        <f:facet name="header" >
-                            <i class="fa fa-filter blue" style="font-size: 16px;"></i>
-                            <p:spacer width="10"/>
-                            <p:outputLabel value="Filtro de busqueda"/>
-                        </f:facet>
-                        <h:panelGrid columns="2">
-                            <p:outputLabel value="1. Departamento: "/>
-                            <p:selectOneMenu id="codigoDepartamento" value="#{graficoController.departamento}" required="true">
-                                <f:selectItem itemLabel="Seleccione un departamento" itemValue="" />
-                                <f:selectItems value="#{catalogosGeneralesController.lstDepartamentos}" var="depa" itemValue="#{depa.codigoDepartamento}" itemLabel="#{depa.codigoDepartamento} - #{depa.nombreDepartamento}"/>
-                            </p:selectOneMenu>
-                        </h:panelGrid>
-                    </p:panel>
+                    <h1>
+                        <i class="fa fa-filter blue" style="font-size: 16px;"></i>
+                        <p:spacer width="10" height="8"/>
+                        <p:outputLabel value="Filtro de busqueda"/>
+                    </h1>
+                    <p:panelGrid id="pnlFiltro" columns="2" columnClasses="col2_label,col10" style="width: 100%; border:0px none; background-color:transparent;" styleClass="form-group ui-panelgrid-blank">
+                        <p:outputLabel value="1. Departamento: "/>
+                        <p:selectOneMenu id="codigoDepartamento" value="#{graficoController.departamento}" required="true">
+                            <f:selectItem itemLabel="Seleccione un departamento" itemValue="" />
+                            <f:selectItems value="#{catalogosGeneralesController.lstDepartamentos}" var="depa" itemValue="#{depa.codigoDepartamento}" itemLabel="#{depa.codigoDepartamento} - #{depa.nombreDepartamento}"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
                 </div>
             </div>
         </div>
