--- a/paquescolar-web/src/main/webapp/app/reg03PreciosReferencia.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg03PreciosReferencia.xhtml
@@ -47,7 +47,7 @@
                             <p:outputLabel value="#{precio.idPrecioRefEmp}" />
                         </p:column>
 
-                        <p:column headerText="Item" width="30" id="item">
+                        <p:column headerText="Item" width="30" id="item" style="text-align: center;">
                             <p:cellEditor>  
                                 <f:facet name="output"><p:outputLabel value="#{precio.noItem}" /></f:facet>
                                 <f:facet name="input">
