--- a/paquescolar-web/src/main/webapp/app/con07EstadisticaPagos.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con07EstadisticaPagos.xhtml
@@ -67,10 +67,10 @@
                         <p:spacer width="10" height="8"/>
                         <p:outputLabel value="Datos"/>
                     </h3>
-                    <h:panelGrid id="pnlDatos" columns="2" styleClass="panelColumns">
-                        <h:panelGrid columns="1">
-                            <p:chart type="donut" model="#{pagoProveedoresController.donutModel}" style="height:300px; width: 400px;" rendered="#{pagoProveedoresController.codigoDepartamento ne '00'}"/>
-                        </h:panelGrid>
+                    <h:panelGrid id="pnlDatos" columns="1" styleClass="panelColumns">
+
+                        <p:chart type="donut" model="#{pagoProveedoresController.donutModel}" style="margin: auto; height:300px; width: 400px;" rendered="#{pagoProveedoresController.codigoDepartamento ne '00'}"/>
+
 
                         <h:panelGrid columns="1">
                             <h3>Cuadro Resumen</h3>
@@ -83,7 +83,7 @@
                                 <p:column headerText="# Planillas" styleClass="numero" width="45">
                                     <p:outputLabel value="#{pago.cantidadPlanilla}"/>
                                 </p:column>
-                                <p:column headerText="# CE" styleClass="numero" width="30">
+                                <p:column headerText="# CE en Planilla" styleClass="numero">
                                     <p:outputLabel value="#{pago.cantidadCe}"/>
                                 </p:column>
                                 <p:column headerText="Monto del Requerimiento" styleClass="numero">
@@ -110,6 +110,12 @@
                                     <p:outputLabel value="#{pago.montoSaldo}">
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </p:outputLabel>
+                                </p:column>
+                                <p:column headerText="Ver detalle" width="30" style="text-align: center;">
+                                    <p:commandLink action="#{pagoProveedoresController.showDetalleRequerimientoPorProveedor}" update="dlgDetalleRequerimientoPorProveedor" >
+                                        <f:setPropertyActionListener target="#{pagoProveedoresController.numeroRequerimiento}" value="#{pago.formatoRequerimiento}"/>
+                                        <i class="fa fa-eye" style="font-size: 17px;"></i>
+                                    </p:commandLink>
                                 </p:column>
 
                                 <p:summaryRow>
@@ -158,5 +164,109 @@
                 </div>
             </div>
         </div>
+
+
+        <p:dialog id="dlgDetalleRequerimientoPorProveedor" widgetVar="dlgDetalleRequerimientoPorProveedor" header="Detalle de pagos por Requerimiento y Proveedor" width="1000" modal="true" visible="#{pagoProveedoresController.dlgDetPagoProveedor}">
+            <p:ajax event="close" listener="#{pagoProveedoresController.cerrarDlgDetPagoProvee}"/>
+            <p:panelGrid  columns="2" columnClasses="col2_label,col10" 
+                          style="width: 100%; border:0px none; background-color:transparent;"
+                          styleClass="form-group ui-panelgrid-blank">
+                <p:outputLabel value="Número Requerimiento"/>
+                <p:outputLabel value="#{pagoProveedoresController.numeroRequerimiento}"/>
+                <p:outputLabel value="#{bundle['compra.rubroAdq']}:" />
+                <p:outputLabel value="#{pagoProveedoresController.nombreRubro}"/>
+            </p:panelGrid>
+            <br/><br/>
+            <p:dataTable id="tblDatos" value="#{pagoProveedoresController.lstResumenPagoPorProveedor}" var="pro" 
+                         rowKey="#{pro.formatoRequerimiento}" rowIndexVar="rowId" sortBy="#{pro.codigoDepartamento}"
+                         scrollable="true" scrollHeight="250" rowStyleClass="#{pro.montoTotalPendiente gt 0 ? null : 'filaCompletada'}">
+
+                <f:facet name="header">
+                    <p:spacer width="10" height="8"/>
+                    <h:commandLink style="float:right;">
+                        <i class="fa fa-download"></i>
+                        <p:spacer width="10" height="8"/>
+                        <h:outputText value="Exportar"/>
+                        <p:dataExporter  type="xls" encoding="ISO-8859-1" target="tblDatos" 
+                                         fileName="lstResumePagoPorProveedor_#{catalogosGeneralesController.formatoFechaReporte}"
+                                         postProcessor="#{reportesWebController.resumenPagoRequerimientoPorProveedorXls}"/>
+                    </h:commandLink>
+                </f:facet>
+
+
+                <p:column headerText="NIT" width="110">
+                    <p:outputLabel value="#{pro.numeroNit}"/>
+                </p:column>
+                <p:column headerText="Proveedor">
+                    <p:outputLabel value="#{pro.razonSocial}"/>
+                </p:column>
+                <p:column headerText="Cant. Contratos" styleClass="numero" width="50">
+                    <p:outputLabel value="#{pro.cantidadTotalContratos}">
+                        <f:convertNumber pattern="#,##0"/>
+                    </p:outputLabel>
+                </p:column>
+                <p:column headerText="(A) Monto Contratado" styleClass="numero" width="80">
+                    <p:outputLabel value="#{pro.montoTotalContratado}">
+                        <f:convertNumber pattern="#,##0.00"/>
+                    </p:outputLabel>
+                </p:column>
+                <p:column headerText="(B) Monto Pagado" styleClass="numero" width="80">
+                    <p:outputLabel value="#{pro.montoTotalPagado}">
+                        <f:convertNumber pattern="#,##0.00"/>
+                    </p:outputLabel>
+                </p:column>
+                <p:column headerText="(C = A - B) Monto Pendiente" styleClass="numero" width="80">
+                    <p:outputLabel value="#{pro.montoTotalContratado - pro.montoTotalPagado}">
+                        <f:convertNumber pattern="#,##0.00"/>
+                    </p:outputLabel>
+                </p:column>
+                <p:column headerText="(D) Monto Reintegrar" styleClass="numero" width="80">
+                    <p:outputLabel value="#{pro.montoTotalReintegrar}">
+                        <f:convertNumber pattern="#,##0.00"/>
+                    </p:outputLabel>
+                </p:column>
+                <p:column headerText="(C - D) Monto Saldo" styleClass="numero" width="80">
+                    <p:outputLabel value="#{pro.montoTotalPendiente}">
+                        <f:convertNumber pattern="#,##0.00"/>
+                    </p:outputLabel>
+                </p:column>
+
+                <p:summaryRow>
+                    <p:column colspan="2" style="text-align:right">
+                        <h:outputText value="Total:" />
+                    </p:column>
+                    <p:column styleClass="numero">
+                        <h:outputText value="#{pagoProveedoresController.ceContratados}">
+                            <f:convertNumber pattern="#,##0"/>
+                        </h:outputText>
+                    </p:column>
+                    <p:column styleClass="numero">
+                        <h:outputText value="#{pagoProveedoresController.totalContratado}">
+                            <f:convertNumber pattern="#,##0.00"/>
+                        </h:outputText>
+                    </p:column>
+                    <p:column styleClass="numero">
+                        <h:outputText value="#{pagoProveedoresController.totalPagado}">
+                            <f:convertNumber pattern="#,##0.00"/>
+                        </h:outputText>
+                    </p:column>
+                    <p:column styleClass="numero">
+                        <h:outputText value="#{pagoProveedoresController.totalContratado-pagoProveedoresController.totalPagado}">
+                            <f:convertNumber pattern="#,##0.00"/>
+                        </h:outputText>
+                    </p:column>
+                    <p:column styleClass="numero">
+                        <h:outputText value="#{pagoProveedoresController.totalReintegro}">
+                            <f:convertNumber pattern="#,##0.00"/>
+                        </h:outputText>
+                    </p:column>
+                    <p:column styleClass="numero">
+                        <h:outputText value="#{pagoProveedoresController.totalPendiente}">
+                            <f:convertNumber pattern="#,##0.00"/>
+                        </h:outputText>
+                    </p:column>
+                </p:summaryRow>
+            </p:dataTable>
+        </p:dialog>
     </ui:define>
 </ui:composition>
